--- a/src/styles.css
+++ b/src/styles.css
@@ -2,27 +2,34 @@
 :root {
   --color-bg: #69F7BE;
   --color-text-main: #373fff;
-  --wrapper-height: 120vh;
+  --wrapper-height: 87vh;
+  --image-max-width: 300px;
+  --image-margin: 1rem;
+
 }
 
 /* Tablet portrait */
 @media (min-width: 768px) {
   :root {
-  --wrapper-hight: 80vh;
+    --wrapper-height: 87vh;
+    --image-max-width: 400px;
+    --image-margin: 5rem;
   }
 }
 
 /* Tablet Landscape */
 @media (min-width: 1024px) {
   :root {
-    --wrapper-height: 80vh;
+    --wrapper-height: 87vh;
+    --image-max-width: 500px;
   }
 }
 
 /* Desktop */
 @media (min-width: 1280px) {
-:root {
-    --wrapper-height: 90vh;
+  :root {
+    --wrapper-height: 87vh;
+    --image-max-width: 500px;
   }
 }
 
@@ -49,7 +56,7 @@ body {
   font-family: HK Grotesk;
   font-style: normal;
   font-weight: bold;
-  font-size: 134px;
+  font-size: 120px;
   line-height: 105%;
 }
 
@@ -57,12 +64,15 @@ body {
   min-height: var(--wrapper-height);
   display: grid;
   place-items: center;
+  margin-left: 2rem;
+  margin-top: 3rem;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Navigation grid */
@@ -71,14 +81,13 @@ body {
   place-items: end;
 }
 
-
 /* Our remix on glitch button + grid for other actions */
 .btn--remix {
   font-family: HK Grotesk;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   font-size: 1.1rem;
   line-height: 1rem;
   font-weight: 500;
@@ -92,11 +101,16 @@ body {
 }
 
 .btn--remix img {
-  margin-right: 0.75rem;
+  margin-right: 0.5rem;
+}
+
+.btn--remix {
+  margin-right: 1rem;
 }
 
 /* Very light scaling for our illustration */
 .illustration {
-  max-width: 70%;
-  max-height: 400px;
+  max-width: 100%;
+  max-height: var(--image-max-width);
+  margin-top: var(--image-margin);
 }
