--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,10 @@ body {
   border-radius: 4px;
 }
 
+.btn--remix:hover {
+  border: 5px solid black;
+}
+
 .btn--remix img {
   margin-right: 0.5rem;
 }
