🌉👟 Checkpoint ./src/App.jsx:617503/4377 ./src/styles.css:617503/399

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,8 +77,8 @@ body {
 
 /* Navigation grid */
 .navigation {
-  display: grid;
-  place-items: end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* Our remix on glitch button + grid for other actions */
