🚩👙 Checkpoint ./src/pages/how-to-use.jsx:617503/33 ./src/styles/styles.css:617503/353 ./src/pages/next-steps.jsx:617503/370 ./src/index.jsx:617503/374 ./src/pages/home.jsx:617503/4

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,15 +51,6 @@ body {
   background-color: var(--color-bg);
 }
 
-.title {
-  color: var(--color-text-main);
-  font-family: HK Grotesk;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 120px;
-  line-height: 105%;
-}
-
 .wrapper {
   min-height: var(--wrapper-height);
   display: grid;
@@ -73,6 +64,19 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.title {
+  color: var(--color-text-main);
+  font-family: HK Grotesk;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 120px;
+  line-height: 105%;
+}
+
+.page .title {
+  font-size: 64px;
 }
 
 /* Navigation grid */
