🏦🐚 Checkpoint ./src/app.jsx:617503/94 ./src/pages/how-to-use.jsx:617503/13009 ./src/components/wiggle.tsx:617503/1410 ./src/components/wiggle.jsx:617503/204 ./src/components/prefers-reduced-motion.jsx:617503/1712 ./package.json:617503/910 ./src/pages/home.jsx:617503/396 ./src/components/router.jsx:617503/99 ./src/hooks/wiggle.jsx:617503/1218 ./src/styles/styles.css:617503/23

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -118,6 +118,10 @@ body {
   margin-right: 1rem;
 }
 
+.btn--click-me {
+  
+}
+
 /* Very light scaling for our illustration */
 .illustration {
   max-width: 100%;
