--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,7 @@
 :root {
   --color-bg: #FFFFA0;
   --color-text-main: #2800FF;
+  --color-primary: #AFECE0;
   --wrapper-height: 87vh;
   --image-max-width: 300px;
   --image-margin: 3rem;
@@ -125,6 +126,18 @@ body {
 
 .btn--click-me:hover {
   text-decoration: underline;
+}
+
+a:not(.btn--remix):link,
+a:not(.btn--remix):visited {
+  text-decoration: none;
+  border-bottom: 6px solid var(--color-primary);
+  color: var(--foreground);
+  transition: background 0.2s linear;
+}
+
+a:hover {
+  background: var(--color-primary);
 }
 
 /* Very light scaling for our illustration */
