--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -87,36 +87,30 @@ body {
 }
 
 /* Our remix on glitch button + grid for other actions */
+/* Our remix on glitch button */
+
 .btn--remix {
   font-family: HK Grotesk;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding: 0.75rem 1rem;
   font-size: 1.1rem;
   line-height: 1rem;
   font-weight: 500;
   align-items: center;
-  display: inline-flex;
   cursor: pointer;
   background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 4px;
-  color: #000;
   text-decoration: none;
-}
-
-.btn--remix:hover {
-  background-color: #D0FFF1;
+  color: #000;
 }
 
 .btn--remix img {
   margin-right: 0.5rem;
 }
 
-.btn--remix {
-  margin-right: 1rem;
+.btn--remix:hover {
+  background-color: #D0FFF1;
 }
 
 .btn--click-me {
@@ -179,7 +173,7 @@ a:hover {
 
 .footer li {
   list-style-type: none;
-  padding: .5rem 1rem;
+ 
   border-right: 1px solid black;
 }
 
