--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,7 @@
-/* Our default values set for mobile */
-/* Our default values set for mobile */
+/******************************************************************************
+START Glitch default styles
+Everything in this section is used
+******************************************************************************/
 :root {
   --color-bg: #D7F5EF;
   --color-text-main: #2800FF;
@@ -44,6 +46,71 @@
     format("opentype");
 }
 
+/* Our remix on glitch button */
+.btn--remix {
+  font-family: HK Grotesk;
+  padding: 0.75rem 1rem;
+  font-size: 1.1rem;
+  line-height: 1rem;
+  font-weight: 500;
+  height: 2.75rem;
+  margin-top: 0.75rem;
+  align-items: center;
+  cursor: pointer;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 4px;
+  text-decoration: none;
+  color: #000;
+}
+.btn--remix img {
+  margin-right: 0.5rem;
+}
+.btn--remix:hover {
+  background-color: #D0FFF1;
+}
+
+/* Navigation grid */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding-top: 1rem;
+  width: 100%;
+}
+
+.footer a:not(.btn--remix):link,
+        a:not(.btn--remix):visited {
+  font-family: HK Grotesk;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.1rem;
+  color: #000;
+  text-decoration: none;
+  border-style: none;
+}
+
+.footer ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer li {
+  list-style-type: none;
+  padding: .5rem 1rem;
+  border-right: 1px solid black;
+}
+
+.footer li:last-of-type {
+  border: none;
+}
+
+.divider {
+  padding: 0 1rem;
+}
+
+
 body {
   font-family: HK Grotesk;
   background-color: var(--color-bg);
@@ -77,12 +144,6 @@ body {
   font-size: 64px;
 }
 
-/* Navigation grid */
-.navigation {
-  display: flex;
-  justify-content: flex-end;
-}
-
 /* Our remix on glitch button + grid for other actions */
 .btn--click-me {
   user-select: none;
@@ -91,6 +152,21 @@ body {
 
 .btn--click-me:hover {
   text-decoration: underline;
+}
+
+/* Very light scaling for our illustration */
+.illustration {
+  max-width: 100%;
+  max-height: var(--image-max-width);
+  margin-top: var(--image-margin);
+  cursor: pointer;
+  padding-left: 3.5rem;
+}
+
+/* Navigation grid */
+.navigation {
+  display: flex;
+  justify-content: flex-end;
 }
 
 a:not(.btn--remix):link,
@@ -103,82 +179,4 @@ a:not(.btn--remix):visited {
 
 a:hover {
   background: var(--color-primary);
-}
-
-/* Very light scaling for our illustration */
-.illustration {
-  max-width: 100%;
-  max-height: var(--image-max-width);
-  margin-top: var(--image-margin);
-  cursor: pointer;
-  padding-left: 3.5rem;
-}
-
-/* Our remix on glitch button */
-
-.btn--remix {
-  font-family: HK Grotesk;
-  padding: 0.75rem 1rem;
-  font-size: 1.1rem;
-  line-height: 1rem;
-  font-weight: 500;
-  height: 2.75rem;
-  margin-top: 0.75rem;
-  align-items: center;
-  cursor: pointer;
-  background: #FFFFFF;
-  border: 1px solid #000000;
-  box-sizing: border-box;
-  border-radius: 4px;
-  text-decoration: none;
-  color: #000;
-}
-
-.btn--remix img {
-  margin-right: 0.5rem;
-}
-
-.btn--remix:hover {
-  background-color: #D0FFF1;
-}
-
-
-/* Navigation grid */
-.footer {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding-top: 1rem;
-  width: 100%;
-}
-
-.footer a:not(.btn--remix):link,
-        a:not(.btn--remix):visited {
-  font-family: HK Grotesk;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.1rem;
-  color: #000;
-  text-decoration: none;
-  border-style: none;
-}
-
-
-.footer ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer li {
-  list-style-type: none;
-  padding: .5rem 1rem;
-  border-right: 1px solid black;
-}
-
-.footer li:last-of-type {
-  border: none;
-}
-
-.divider {
-  padding: 0 1rem;
 }
