--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,6 +111,40 @@ Everything in this section is used
 }
 
 
+
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 1rem 0;
+  width: 100%;
+  border-top: 4px solid #fff;
+}
+
+.footer a:not(.btn--remix):link,
+        a:not(.btn--remix):visited {
+  font-family: HK Grotesk;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.1rem;
+  color: #000;
+  text-decoration: none;
+  border-style: none;
+}
+
+.footer .links {
+  padding: .5rem 1rem;
+}
+
+.divider {
+  padding: 0 1rem;
+}
+
+
+
+
+
 body {
   font-family: HK Grotesk;
   background-color: var(--color-bg);
