🤘👟 Checkpoint ./src/pages/home.jsx:14029292/5 ./src/pages/about.jsx:14029292/8 ./src/styles/styles.css:14029292/171

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -130,7 +130,19 @@ h1 {
   line-height: 105%;
 }
 .page h1 {
-  font-size: 64px;
+  font-size: 48px;
+}
+
+.page p {
+  line-height: 1.5;
+}
+
+.page a:visited {
+  color: #000;
+}
+
+.page a:hover {
+  text-decoration: none;
 }
 
 /* The React image and "click me" text */
