--- a/src/styles.css
+++ b/src/styles.css
@@ -27,18 +27,18 @@ pre {
   overflow-x: scroll;
 }
 
-#robs-root {
+#dom-zone-root {
   padding: 2rem;
   border: 3px solid gray;
 }
 
-#robs-root div {
+#dom-zone-root div {
   border: 2px solid #000000;
   margin: 2px;
   padding: 2px;
 }
 
-#robs-root ul {
+#dom-zone-root ul {
   border: 2px solid blue;
   margin: 2px;
   padding: 2px 2px 2px 1.5rem;
