--- a/src/dinnik.css
+++ b/src/dinnik.css
@@ -11,7 +11,6 @@
   --dk-emphasis: oklch(72% 0.19 320);
   --dk-emphasis-hover: oklch(75% 0.19 320);
 
-
   --dk-text-deemph: oklch(75% 0 0);
 }
 
@@ -135,4 +134,9 @@ html {
 
 .dk-edit-menu button.dk-go:hover {
   background-color: var(--dk-emphasis-hover);
+}
+
+.dk-view {
+  max-height: calc(100vh - 6rem);
+  overflow-y: scroll;
 }
